# sgc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: sgc.xcf
include/: sgc.h
lib/munit/: munit.c  munit.h
src/: sgc.c
test/: gc_test.c
